# hello-sdl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
assets/shaders/: main.vert
data/shaders/: main.frag
lib/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: debug.cpp  debug.h  engine.h  main.cpp  window.cpp  window.h
src/app/states/: main_state.cpp  main_state.h  state.h
src/engine/: debug.cpp  debug.h  delegate.h
src/engine/entities/: camera.cpp  camera.h  entity.cpp  entity.h
src/engine/gl/: mesh.cpp  mesh.h  shader.cpp  shader.h
src/engine/managers/: manager.cpp  manager.h  manager_system.cpp  manager_system.h  system_manager.cpp  system_manager.h  window_manager.cpp  window_manager.h
src/engine/utils/: delegate.cpp  delegate.h  file.cpp  file.h  singleton.h  string.cpp  string.h  timer.cpp  timer.h
src/engine/video/: window.cpp  window.h
src/entities/: camera.cpp  camera.h  entity.cpp  entity.h
src/gl/: mesh.cpp  mesh.h
src/managers/: manager.h  manager_system.cpp  manager_system.h  system_manager.cpp  system_manager.h  window_manager.cpp  window_manager.h
src/states/: main_state.cpp  main_state.h
src/utils/: delegate.cpp  delegate.h  string.h  timer.h
src/video/: window.h
